--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.5"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5"
     />
 
     <link rel="icon" type="image/png" href="/favicon.png" />
@@ -47,7 +47,6 @@
         "@context": "https://schema.org",
         "@type": "Person",
         "name": "Badhri Narayanan Hari",
-        "jobTitle": "Developer",
         "url": "https://badhri.pages.dev",
         "email": "mailto:badhrihari123@gmail.com",
         "sameAs": ["https://github.com/badhri-hari"]
@@ -58,7 +57,7 @@
       {
         "@context": "https://schema.org",
         "@type": "WebApplication",
-        "name": "wikiarticles",
+        "name": "Badhri's Blog",
         "url": "https://badhri.pages.dev",
         "description": "",
         "creator": {
@@ -71,6 +70,8 @@
         "image": "https://badhri.pages.dev/public/"
       }
     </script>
+
+    <script defer src="/_vercel/insights/script.js"></script>
   </head>
 
   <body>
