--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         </p>
 
         <p>
-          <strong>Privacy details:</strong> This site uses <a href="https://goatcounter.com" rel="noopener" target="_blank">GoatCounter</a> for web analytics; no unique identifiers and open-source.
+          <strong>Privacy details:</strong> This site uses <a href="https://goatcounter.com" rel="noopener" target="_blank">GoatCounter</a> for web analytics; no unique identifiers, is easily blocked by adblockers, and open-source.
         </p>
 
         <p><em>(create a <a 
