--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
 
         <p>
           <strong>Privacy details:</strong> This site uses <a href="https://goatcounter.com" rel="noopener" target="_blank">GoatCounter</a> for web analytics; no unique identifiers, is easily blocked by adblockers, and open-source.
+          When you post/like a comment, a unique ID is created and stored in your browser storage - this is only used to track which comments you have liked and nothing else whatsoever. 
         </p>
 
         <p><em>(create a <a 
