--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Badhri's Blog</title>
 
     <meta name="author" content="Badhri Narayanan Hari" />
-    <meta name="description" content="" />
+    <meta name="description" content="half actual blog posts, half random things" />
 
     <meta property="og:title" content="Badhri's Blog" />
     <meta property="og:image" content="/banner.png" />
@@ -65,6 +65,10 @@
           "url": "https://badhri.pages.dev"
         },
         "operatingSystem": "All",
+        "offers": {
+          "@type": "Offer",
+          "price": 0
+        },
         "inLanguage": "en",
         "image": "https://badhri.pages.dev/public/"
       }
@@ -160,15 +164,14 @@
         </p>
 
         <p>
-          <strong>Privacy details:</strong> This site uses <a href="https://goatcounter.com" rel="noopener" target="_blank">GoatCounter</a> for web analytics; no unique identifiers, is easily blocked by adblockers, and open-source.
-          When you post/like a comment, a unique ID is created and stored in your browser storage - this is only used to track which comments you have liked and nothing else whatsoever. 
+          <strong>Privacy details:</strong> This site uses <a href="https://goatcounter.com" rel="noopener" target="_blank">GoatCounter</a> for web analytics (<a href="https://badhri.goatcounter.com" rel="noopener" target="_blank">my analytics portal</a>); no unique identifiers, is easily blocked by adblockers, and open-source.
+          The <em><a href="https://badhri.pages.dev/chat" rel="noopener" target="_self">Live Chat</a></em> page uses an iframe from Chattable for the chat functionality, their <a href="https://iframe.chat/tos.html" rel="noopener" target="_blank">terms of conditions</a> will apply when you visit that page. 
+          When you click on the play button for a YouTube video, a YouTube iframe will open and start autoplaying, thus the associated third-party cookies and/or tracking will be activated.
+          Lastly, when you post/like a comment, a unique ID is created and stored in your browser storage - this is only used to track which comments you have liked and nothing else whatsoever.
         </p>
 
-        <p><em>(create a <a 
-           href="https://github.com/badhri-hari/blog/issues/new"
-            target="_blank"
-            rel="noopener"
-          >new issue</a> if you want me to create a no-JS version of this site)</em></p>
+        <p>Your data will not be shared with, or sold to,
+          any third-parties.</p>
       </div>
     </noscript>
 
@@ -177,5 +180,7 @@
 
     <script data-goatcounter="https://badhri.goatcounter.com/count"
         async src="https://gc.zgo.at/count.js"></script>
+    
+    <script src="https://iframe.chat/scripts/main.min.js"></script>
   </body>
 </html>
